# ClawPilot

./: .env.example  .gitignore  README.md  pyproject.toml
apps/dashboard/: README.md
docs/: ARCHITECTURE.md  DASHBOARD_DATA_CONTRACT.md  DATA_MODEL.md  LOCAL_TEMPORAL_DEV.md  PLAN.md  TELEGRAM_DIRECT_SENDER.md  TELEGRAM_PROGRESS_FEED.md  TELEGRAM_RENDERING.md  TEMPORAL_WORKFLOWS.md
docs/ADR/: ADR-001-repo-boundaries.md  ADR-002-v1-balanced-autonomy.md  ADR-003-temporal-as-orchestrator.md
integrations/: README.md  clawloop.md  openclaw.md  telegram.md
schemas/: manifest_snapshot.schema.json  progress_event.schema.json  task_state.schema.json
scripts/: bootstrap-dev.sh  check-env.sh
tests/: test_artifacts.py  test_clawloop_commands.py  test_cli.py  test_cli_local_execute.py  test_cli_notifier.py  test_cli_notifier_sender.py  test_cli_telegram_direct.py  test_cli_temporal_dev.py  test_cli_temporal_execution.py  test_config.py  test_dev_runner.py  test_dev_server.py  test_execution_guardrails.py  test_execution_persistence.py  test_local_execute.py  test_local_smoke.py  test_models.py  test_notifier_builders.py  test_notifier_policy.py  test_notifier_renderers.py  test_notifier_router.py  test_notifier_senders.py  test_notifier_transport.py  test_openclaw_routing_stub.py  test_progress_serialization.py  test_registry.py  test_runner.py  test_runtime_paths.py  test_summaries.py  test_telegram_direct.py  test_temporal_client.py  test_temporal_execution.py  test_temporal_registry.py  test_temporal_workflows.py  test_worker_runtime.py
workers/: README.md
(+56 files in other folders)
