[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawpilot"
version = "0.1.0"
description = "ClawPilot orchestration runtime skeleton"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["temporalio", "pydantic"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
clawpilot = "clawpilot.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
